# rust-ddd-example-v1

./: Cargo.toml  readme.md
src/: application.rs  domain.rs  infrastructure.rs  main.rs  presentation.rs
src/application/: dtos.rs  handler.rs  handlers_impl.rs  requests.rs
src/domain/: entities.rs  repositories.rs
src/infrastructure/: repositories_impl.rs
src/presentation/: presenters.rs
